# k6-reports-tool

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml
.github/workflows/: build.yaml
reports/: http_req_duration.csv
src/: app.rs  cli.rs  client.rs  error.rs  main.rs  metrics.rs  query.rs  report.rs
