[package]
name = "k6-reports"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
chrono = { version = "0.4.19", features = ["serde"] }
csv-async = { version = "1.2.4", features=  ["with_serde", "tokio"] }
influxdb = { version = "0.5.1", features = ["derive"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
structopt = "0.3.26"
structopt-derive = "0.4.18"
tokio = { version = "1.7", features = ["fs", "macros", "rt-multi-thread"] }